# kstring

./: .copilot-instructions.md  AGENTS.md  CMakeLists.txt  README.md  build.ps1  build.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml
_examples/: CMakeLists.txt  main.c
_research/: Christian Winter - A Deep Dive into German Strings.md  Lukas Vogel - Why German Strings are Everywhere.md  Thomas Neumann, Michael Freitag - Umbra - A Disk-Based System with In-Memory Performance.md
cmake/: KStringConfig.cmake.in  USAGE.md  kstring.pc.in
include/: KString.h
src/: KString.c
